--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,12 @@ body {
     font-family: 'JetBrains Mono', monospace;
     background-color: #0B0C10;
 }
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
